# vid-diffusion-benchmark-suite

./: .dependabot.yml  .dockerignore  .editorconfig  .env.example  .pre-commit-config.yaml  .secrets.baseline  ADAPTIVE_SDLC_ENHANCEMENT_REPORT.md  API_DOCUMENTATION.md  API_REFERENCE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_ENHANCEMENT_REPORT.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPREHENSIVE_FEATURE_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READINESS_REPORT.md  Dockerfile  Dockerfile.production  Dockerfile.research  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_CHARTER.md  README.md  RESEARCH_EXCELLENCE_COMPLETION_REPORT.md  RESEARCH_METHODOLOGY.md  SDLC_ENHANCEMENT_SUMMARY.md  SECURITY.md  TERRAGON_AUTONOMOUS_IMPLEMENTATION.md  TERRAGON_AUTONOMOUS_SDLC_EXECUTION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_v5_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_v5_FINAL_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  codecov.yml  comprehensive_test_suite.py  conftest.py.bak  deployment_readiness_report.json  (+35 more)
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: project-metrics.json
.github/workflows/: ci.yml  release.yml  security.yml
.terragon/: README.md  autonomous-executor.py  scheduler.py  value-config.yaml  value-discovery-engine.py  value-metrics-init.json  value-metrics.json
deployment/: autonomous_deployment_orchestrator.py  autonomous_production_deployment.py  autonomous_research_deployment.py  docker-compose.prod.yml  docker-compose.production.yml  healthcheck.py  nginx.conf  production.dockerfile  production_deployment.py  terragon_autonomous_production.py
docker/: README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  GITHUB_ACTIONS_SETUP.md  GOVERNANCE.md  RELEASE_PROCESS.md  RESEARCH_GUIDE.md  ROADMAP.md  SECURITY.md  SETUP_REQUIRED.md  TESTING.md  index.md
docs/adr/: 0001-containerized-model-isolation.md  0002-prometheus-metrics-collection.md  0003-standardized-evaluation-protocol.md  001-docker-containerization-strategy.md  README.md
docs/getting-started/: installation.md
docs/runbooks/: incident-response.md  operational-procedures.md
docs/workflows/: SETUP_INSTRUCTIONS.md  github-actions-setup.md  performance-benchmarks.yml
kubernetes/: production-deployment.yaml
monitoring/: alertmanager.yml  alerts.yml  docker-compose.monitoring.yml  prometheus.yml
monitoring/grafana/: dashboard.json
scripts/: analyze_performance_regression.py  build.sh  collect_metrics.py  generate_performance_report.py  healthcheck.py  production_entrypoint.py  profile_gpu_memory.py  setup.sh  update-dependencies.py
src/vid_diffusion_bench/: __init__.py  adaptive_inference_optimization.py  adaptive_resilience.py  adaptive_scaling.py  advanced_optimization.py  ai_optimization.py  auto_scaling.py  autonomous_learning_framework.py  autonomous_quality_gates.py  autonomous_resilience_framework.py  benchmark.py  circuit_breaker.py  cli.py  comprehensive_logging.py  cross_platform_engine.py  distributed_computing.py  emergent_capabilities_detection.py  enhanced_error_handling.py  enhanced_monitoring.py  enhanced_security.py  enhanced_validation.py  exceptions.py  federated_benchmark.py  federated_benchmark_learning.py  generation1_enhancements.py  generation2_robustness.py  generation3_optimization.py  global_compliance_framework.py  globalization.py  health_monitoring.py  intelligent_caching.py  intelligent_documentation.py  internationalization.py  metrics.py  mock_torch.py  multimodal_evaluation.py  (+26 more)
tests/: __init__.py  conftest.py  test_basic_no_deps.py  test_basic_structure.py  test_benchmark.py  test_federated_benchmark.py  test_metrics.py  test_performance_optimization.py  test_profiler.py  test_prompts.py  test_research_enhanced.py  test_streaming_benchmark.py
(+79 files in other folders)
